# solana-file-management

./: Anchor.toml  package-lock.json
app/public/: index.html
app/src/: App.css  App.tsx  FileUpload.tsx  MyWallet.tsx  idl.json  page.css
ipfs/public/: index.html
ipfs/src/: App.css  App.js
programs/solana_file_sharing_system/: Cargo.toml
programs/solana_file_sharing_system/src/: lib.rs
tests/: solana_file_sharing_system.js
